# openai-agents-python

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_provider.md  question.md
.github/workflows/: docs.yml  issues.yml  publish.yml  tests.yml  update-docs.yml
agents/: index.html
config/: index.html
context/: index.html
docs/: agents.md  config.md  context.md  examples.md  guardrails.md  handoffs.md  index.md  mcp.md  models.md  multi_agent.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  sessions.md  streaming.md  tools.md  tracing.md  visualization.md  visualizations.md
docs/ja/: agents.md  config.md  context.md  examples.md  guardrails.md  handoffs.md  index.md  mcp.md  models.md  multi_agent.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  sessions.md  streaming.md  tools.md  tracing.md  visualization.md
docs/models/: index.md  litellm.md
docs/realtime/: guide.md  quickstart.md
docs/ref/: agent_output.md  function_schema.md  guardrail.md  memory.md  model_settings.md  repl.md  run.md  tool_context.md
docs/scripts/: translate_docs.py
docs/stylesheets/: extra.css
docs/voice/: pipeline.md  quickstart.md  tracing.md
examples/: index.html
examples/agent_patterns/: README.md  deterministic.py  forcing_tool_use.py  input_guardrails.py  llm_as_a_judge.py  output_guardrails.py  parallelization.py  streaming_guardrails.py
examples/basic/: agent_lifecycle_example.py  hello_world.py  hello_world_jupyter.ipynb  hello_world_jupyter.py  lifecycle_example.py  local_image.py  non_strict_output_type.py  previous_response_id.py  prompt_template.py  remote_image.py  session_example.py  stream_items.py  tools.py
examples/financial_research_agent/: README.md  main.py  manager.py  printer.py
examples/handoffs/: message_filter.py  message_filter_streaming.py
examples/hosted_mcp/: approvals.py  simple.py
examples/model_providers/: README.md  custom_example_agent.py  custom_example_global.py  custom_example_provider.py  litellm_auto.py  litellm_provider.py
examples/realtime/: demo.py  no_ui_demo.py  ui.py
examples/reasoning_content/: __init__.py  main.py  runner_example.py
examples/research_bot/: README.md  main.py  manager.py
examples/tools/: code_interpreter.py  computer_use.py  file_search.py  image_generator.py
guardrails/: index.html
handoffs/: index.html
ja/: index.html
ja/agents/: index.html
ja/config/: index.html
ja/context/: index.html
ja/examples/: index.html
ja/guardrails/: index.html
ja/handoffs/: index.html
ja/mcp/: index.html
ja/models/: index.html
ja/multi_agent/: index.html
ja/quickstart/: index.html
ja/ref/: index.html
ja/release/: index.html
ja/repl/: index.html
ja/results/: index.html
ja/running_agents/: index.html
ja/sessions/: index.html
ja/streaming/: index.html
ja/tools/: index.html
ja/tracing/: index.html
ja/visualization/: index.html
mcp/: index.html
models/: index.html
models/litellm/: index.html
multi_agent/: index.html
quickstart/: index.html
realtime/guide/: index.html
realtime/quickstart/: index.html
ref/: index.html
ref/agent/: index.html
ref/agent_output/: index.html
ref/exceptions/: index.html
ref/function_schema/: index.html
ref/guardrail/: index.html
ref/handoffs/: index.html
ref/items/: index.html
ref/lifecycle/: index.html
ref/memory/: index.html
ref/model_settings/: index.html
ref/repl/: index.html
ref/result/: index.html
ref/run/: index.html
ref/run_context/: index.html
ref/stream_events/: index.html
ref/tool/: index.html
ref/tracing/: index.html
ref/usage/: index.html
release/: index.html
repl/: index.html
results/: index.html
running_agents/: index.html
search/: search_index.json
sessions/: index.html
src/agents/: __init__.py  _config.py  _run_impl.py  agent.py  agent_output.py  exceptions.py  function_schema.py  guardrail.py  handoffs.py  items.py  lifecycle.py  model_settings.py  repl.py  result.py  run.py  stream_events.py  strict_schema.py  tool.py  tool_context.py  usage.py  version.py  visualizations.py
streaming/: index.html
tests/: README.md  conftest.py  fake_model.py  test_agent_config.py  test_agent_hooks.py  test_agent_prompt.py  test_agent_runner.py  test_agent_runner_streamed.py  test_agent_tracing.py  test_cancel_streaming.py  test_computer_action.py  test_config.py  test_doc_parsing.py  test_extension_filters.py  test_extra_headers.py  test_function_schema.py  test_function_tool.py  test_function_tool_decorator.py  test_global_hooks.py  test_guardrails.py  test_handoff_tool.py  test_items_helpers.py  test_logprobs.py  test_max_turns.py  test_openai_chatcompletions.py  test_openai_chatcompletions_converter.py  test_openai_chatcompletions_stream.py  test_openai_responses_converter.py  test_output_tool.py  test_pretty_print.py  test_prevent_infinite_tool_loop.py  test_reasoning_content.py  test_repl.py  test_responses.py  test_responses_tracing.py  test_result_cast.py  test_run.py  test_run_config.py  test_run_error_details.py  test_run_step_execution.py  (+15 more)
tests/docs/: agents.md  guardrails.md  index.md  quickstart.md  results.md  tracing.md
tests/fastapi/: streaming_app.py  test_streaming_context.py
tests/mcp/: conftest.py  helpers.py  test_caching.py  test_connect_disconnect.py  test_mcp_tracing.py  test_mcp_util.py  test_prompt_server.py  test_runner_calls_mcp.py  test_server_errors.py  test_tool_filtering.py
tests/model_settings/: test_serialization.py
tests/models/: test_kwargs_functionality.py  test_litellm_chatcompletions_stream.py  test_litellm_extra_body.py  test_map.py
tests/realtime/: test_agent.py  test_conversion_helpers.py  test_item_parsing.py  test_model_events.py  test_openai_realtime.py  test_realtime_handoffs.py  test_runner.py  test_session.py  test_tracing.py  test_transport_events.py
tools/: index.html
tracing/: index.html
visualization/: index.html
(+263 files in other folders)
